--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,11 @@ minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.3
 loader_version=0.13.3
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.1
 maven_group=com.github.steveplays28
 archives_base_name=RealisticSleep
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.51.0+1.18.2
+cloth_config_version=6.2.57
+modmenu_version=3.1.1
