Fix config not being reloaded when saving via mod menu

--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,12 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
 //    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    // Cloth config
+    // Cloth Config
     modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
 
-    // ModMenu
+    // Mod Menu
     modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
