feat: Add betterSleeping Revived compat, include Fabric API, update config
BREAKING CHANGE: Fabric API is now a requirement

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,6 @@ maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
 
 # Dependencies
+fabric_version=0.72.0+1.19.2
 cloth_config_version=7.0.69
 modmenu_version=4.0.0
