ci: Add CI/CD workflows and update funding info

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ loader_version=0.14.10
 mod_version=1.7.0
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
+supported_minecraft_version=1.18.x-1.19.x
 
 # Dependencies
 fabric_version=0.72.0+1.19.2
