feat: Integrate Server Translations API
Translation keys now work serverside, using [Server Translations API](https://github.com/NucleoidMC/Server-Translations).

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,11 @@ repositories {
         name = "TerraformersMC"
         url = "https://maven.terraformersmc.com/"
     }
+
+    maven {
+        name = "Nucleoid"
+        url = "https://maven.nucleoid.xyz"
+    }
 }
 
 dependencies {
@@ -58,6 +63,8 @@ dependencies {
     modCompileOnly("maven.modrinth:sodium:${project.sodium_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
+
+    modImplementation include("xyz.nucleoid:server-translations-api:${project.server_translation_api_version}")
 }
 
 processResources {
