--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ fabric_version=0.83.0+1.20
 cloth_config_version=11.0.99
 modmenu_version=7.0.1
 sodium_version=mc1.20.1-0.5.3
+server_translation_api_version=2.0.0+1.20
