--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20
-yarn_mappings=1.20+build.1
-loader_version=0.14.21
+minecraft_version=1.20.2
+yarn_mappings=1.20.2+build.4
+loader_version=0.15.0
 
 # Mod Properties
 mod_version=1.9.1
@@ -14,8 +14,8 @@ archives_base_name=realisticsleep
 supported_minecraft_version=1.20.x
 
 # Dependencies
-fabric_version=0.83.0+1.20
-cloth_config_version=11.0.99
-modmenu_version=7.0.1
-sodium_version=mc1.20.1-0.5.3
-server_translation_api_version=2.0.0+1.20
+fabric_version=0.91.1+1.20.2
+cloth_config_version=12.0.111
+modmenu_version=8.0.0
+sodium_version=mc1.20.2-0.5.3
+server_translation_api_version=2.1.0+1.20.2-rc2
