--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ supported_minecraft_version=1.19.x
 fabric_version=0.72.0+1.19.2
 cloth_config_version=7.0.69
 modmenu_version=4.1.2
+server_translation_api_version=1.4.16+1.19
