--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.2
 loader_version=0.14.10
 
 # Mod Properties
@@ -14,7 +14,7 @@ archives_base_name=realisticsleep
 supported_minecraft_version=1.19.x
 
 # Dependencies
-fabric_version=0.72.0+1.19.3
+fabric_version=0.76.0+1.19.4
 cloth_config_version=9.1.104
 modmenu_version=5.1.0
-server_translation_api_version=1.4.16+1.19
+server_translation_api_version=2.0.0-beta.2+1.19.4-pre2
