--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.14.21
 mod_version=1.9.1
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
-supported_minecraft_version=1.20.x
+supported_minecraft_version=1.20-1.20.1
 
 # Dependencies
 fabric_version=0.83.0+1.20
