--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.15.0
 mod_version=1.9.1
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
-supported_minecraft_version=1.20.x
+supported_minecraft_version=1.20.2
 
 # Dependencies
 fabric_version=0.91.1+1.20.2
