--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ mod_version=1.9.1
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
 supported_minecraft_version=1.19.3
+supported_minecraft_version_name=1.19.3
 
 # Dependencies
 fabric_version=0.72.0+1.19.3
