--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ mod_version=1.9.1
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
 supported_minecraft_version=1.20.2
+supported_minecraft_version_name=1.20.2
 
 # Dependencies
 fabric_version=0.91.1+1.20.2
