--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,8 @@ loader_version=0.14.10
 mod_version=1.9.1
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
-supported_minecraft_version=1.19-1.19.2
+supported_minecraft_version=>=1.19- <1.19.2-
+supported_minecraft_version_name=1.19-1.19.2
 
 # Dependencies
 fabric_version=0.72.0+1.19.2
