--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.14.21
 mod_version=1.9.1
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
-supported_minecraft_version=1.20-1.20.1
+supported_minecraft_version=>=1.20- <1.20.1-
 supported_minecraft_version_name=1.20-1.20.1
 
 # Dependencies
