ci: Fix version range for the CD workflow

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.15.0
 mod_version=1.9.2
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
-supported_minecraft_version=>=1.19- <1.19.2-
+supported_minecraft_version=>=1.19 <=1.19.2
 supported_minecraft_version_name=1.19-1.19.2
 
 # Dependencies
