--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.15.0
 mod_version=1.9.2
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
-supported_minecraft_version=>=1.20- <1.20.1-
+supported_minecraft_version=>=1.20 <=1.20.1
 supported_minecraft_version_name=1.20-1.20.1
 
 # Dependencies
