--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 //file:noinspection GroovyAccessibility
 
 plugins {
-    id 'fabric-loom' version '0.12-SNAPSHOT'
+    id 'fabric-loom' version '1.4-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -52,10 +52,7 @@ dependencies {
     }
 
     // Server Translation API
-    modImplementation include("fr.catcore:server-translations-api:${project.server_translation_api_version}")
-
-    // Mixin Extras
-    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.2.1")))
+    modImplementation include("xyz.nucleoid:server-translations-api:${project.server_translation_api_version}")
 }
 
 processResources {
