--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,21 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.28
-loader_version=0.14.10
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
+loader_version=0.15.0
 
 # Mod Properties
-mod_version=1.10.1
+mod_version=1.10.2
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
-supported_minecraft_version=>=1.19 <=1.19.2
-supported_minecraft_version_name=1.19-1.19.2
+supported_minecraft_version=>=1.20.3
+supported_minecraft_version_name=1.20.3-1.20.4
 
 # Dependencies
-fabric_version=0.72.0+1.19.2
-cloth_config_version=7.0.69
-modmenu_version=4.1.2
-server_translation_api_version=1.4.16+1.19
+fabric_version=0.92.0+1.20.4
+cloth_config_version=13.0.121
+modmenu_version=9.0.0
+server_translation_api_version=2.2.0+1.20.3-rc1
