build: Update to Minecraft 1.20.3/1.20.4

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.4
+minecraft_version=1.20.3
+yarn_mappings=1.20.3+build.1
 loader_version=0.14.10
 
 # Mod Properties
 mod_version=1.10.1
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
-supported_minecraft_version=1.20.2
-supported_minecraft_version_name=1.20.2
+supported_minecraft_version=>=1.20.3 <=1.20.4
+supported_minecraft_version_name=1.20.3-1.20.4
 
 # Dependencies
-fabric_version=0.91.1+1.20.2
-cloth_config_version=12.0.111
-modmenu_version=8.0.0
-server_translation_api_version=2.1.0+1.20.2-rc2
+fabric_version=0.91.1+1.20.3
+cloth_config_version=13.0.121
+modmenu_version=9.0.0
+server_translation_api_version=2.2.0+1.20.3-rc1
