build: Update Gradle settings

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,16 @@
-# Done to increase the memory available to gradle.
+# Gradle settings
+# Increase memory available to Gradle, enable parallelism, and enable caching
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
+org.gradle.caching=true
 
-# Fabric Properties
+# Fabric properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.28
 loader_version=0.14.10
 
-# Mod Properties
+# Mod properties
 mod_version=1.10.1
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
