--- a/gradle.properties
+++ b/gradle.properties
@@ -6,19 +6,21 @@ org.gradle.caching=true
 
 # Fabric properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.5
-yarn_mappings=1.20.5+build.1
-loader_version=0.15.10
+
+minecraft_version=1.21
+yarn_mappings=1.21+build.2
+loader_version=0.15.11
+
 
 # Mod properties
-mod_version=1.10.2
+mod_version=1.10.3
 maven_group=com.github.steveplays28
 archives_base_name=realisticsleep
-supported_minecraft_version=>=1.20.5
-supported_minecraft_version_name=1.20.5
+supported_minecraft_version=>=1.21
+supported_minecraft_version_name=1.21
 
 # Dependencies
-fabric_version=0.97.8+1.20.5
-cloth_config_version=14.0.126
-modmenu_version=10.0.0-beta.1
-server_translation_api_version=2.3.0+1.20.5-rc2
+fabric_version=0.100.3+1.21
+cloth_config_version=15.0.127
+modmenu_version=11.0.0-beta.2
+server_translation_api_version=2.3.1+1.21-pre2
