--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Publish (Maven)
 
 on:
   workflow_dispatch:
@@ -67,52 +67,6 @@ jobs:
 
       - name: Execute Gradle build
         run: ./gradlew build
-
-      # https://github.com/marketplace/actions/mc-publish
-      - name: Publish mod (Fabric)
-        uses: Kir-Antipov/mc-publish@v3.3
-        with:
-          # Modrinth
-          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
-
-          # CurseForge
-          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
-
-          name: ${{ steps.mod_version.outputs.value }} (${{ steps.supported_minecraft_version_name.outputs.value }})
-          github-tag: ${{ env.release_tag_name }}
-          files: |
-            fabric/build/libs/!(*-@(sources|dev-shadow|javadoc|transformProduction*).jar)
-            fabric/build/libs/*-@(sources|javadoc).jar
-          version-type: release
-          modrinth-featured: false
-          changelog-file: CHANGELOG_LATEST.md
-
-      # https://github.com/marketplace/actions/mc-publish
-      - name: Publish mod (NeoForge)
-        uses: Kir-Antipov/mc-publish@v3.3
-        with:
-          # Modrinth
-          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
-
-          # CurseForge
-          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
-
-          name: ${{ steps.mod_version.outputs.value }} (${{ steps.supported_minecraft_version_name.outputs.value }})
-          github-tag: ${{ env.release_tag_name }}
-          files: |
-            neoforge/build/libs/!(*-@(sources|dev-shadow|javadoc|transformProduction*).jar)
-            neoforge/build/libs/*-@(sources|javadoc).jar
-          version-type: release
-          modrinth-featured: false
-          changelog-file: CHANGELOG_LATEST.md
-
-      - name: Publish mod to GitHub releases
-        uses: ncipollo/release-action@v1.14.0
-        with:
-          name: ${{ steps.mod_version.outputs.value }} (${{ steps.supported_minecraft_version_name.outputs.value }})
-          tag: ${{ env.release_tag_name }}
-          artifacts: "**/build/libs/!(*-@(dev-shadow|transformProduction*).jar)"
-          bodyFile: CHANGELOG_LATEST.md
 
       - name: Publish mod to Maven repository
         run: ./gradlew publish
