--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Setup JDK (Temurin 17)
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
           cache: gradle
 
@@ -52,7 +52,7 @@ jobs:
         run: ./gradlew build
 
       - name: Upload Gradle artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: compiled_jar_files
-          path: build/libs/
+          path: "**/build/libs/"
