--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,45 @@
 # Gradle settings
 # Increase memory available to Gradle, enable parallelism, and enable caching
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 org.gradle.caching=true
 
-# Fabric properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20
-yarn_mappings=1.20+build.1
-loader_version=0.14.10
-
 # Mod properties
+maven_group=io.github.steveplays28
+java_package_name=stevesrealisticsleep
+mod_id=stevesrealisticsleep
+mod_namespace=steves_realistic_sleep
+mod_name=Steve's Realistic Sleep
+mod_description=Makes sleeping speed up time instead of skipping to day.
+mod_license=LGPL-3.0
 mod_version=1.10.2
-maven_group=com.github.steveplays28
-archives_base_name=realisticsleep
 supported_minecraft_version=>=1.20 <=1.20.1
 supported_minecraft_version_name=1.20-1.20.1
 
+# Multiloader properties
+architectury_plugin_version=3.4-SNAPSHOT
+architectury_loom_version=1.6-SNAPSHOT
+shadow_plugin_version=7.1.2
+minecraft_version=1.20.1
+java_version=17
+enabled_platforms=fabric,forge
+
+# mc-publish properties
+curseforge_project_id=930207
+modrinth_project_id=KuNKN7d2
+
+# Fabric properties
+# Check these on https://modmuss50.me/fabric.html
+yarn_mappings=1.20.1+build.10
+fabric_loader_version=0.14.25
+
+# (Neo)Forge properties
+neoforge_version=47.1.100
+
 # Dependencies
-fabric_version=0.83.0+1.20
-cloth_config_version=11.0.99
-modmenu_version=7.0.1
+mixin_extras_version=0.3.5
+architectury_api_version=9.2.14
+fabric_api_version=0.90.7+1.20.1
+cloth_config_version=11.1.118
+mod_menu_version=7.2.2
 server_translation_api_version=2.0.0+1.20
