--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,45 @@
 # Gradle settings
 # Increase memory available to Gradle, enable parallelism, and enable caching
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 org.gradle.caching=true
 
-# Fabric properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.4
-loader_version=0.14.10
-
 # Mod properties
+maven_group=io.github.steveplays28
+java_package_name=stevesrealisticsleep
+mod_id=stevesrealisticsleep
+mod_namespace=steves_realistic_sleep
+mod_name=Steve's Realistic Sleep
+mod_description=Makes sleeping speed up time instead of skipping to day.
+mod_license=LGPL-3.0
 mod_version=1.10.2
-maven_group=com.github.steveplays28
-archives_base_name=realisticsleep
 supported_minecraft_version=1.20.2
 supported_minecraft_version_name=1.20.2
 
+# Multiloader properties
+architectury_plugin_version=3.4-SNAPSHOT
+architectury_loom_version=1.6-SNAPSHOT
+shadow_plugin_version=7.1.2
+minecraft_version=1.20.2
+java_version=17
+enabled_platforms=fabric,neoforge
+
+# mc-publish properties
+curseforge_project_id=930207
+modrinth_project_id=KuNKN7d2
+
+# Fabric properties
+# Check these on https://modmuss50.me/fabric.html
+yarn_mappings=1.20.2+build.4
+fabric_loader_version=0.14.25
+
+# NeoForge properties
+neoforge_version=20.2.88
+
 # Dependencies
-fabric_version=0.91.1+1.20.2
-cloth_config_version=12.0.111
-modmenu_version=8.0.0
+mixin_extras_version=0.3.5
+architectury_api_version=10.1.20
+fabric_api_version=0.91.1+1.20.2
+cloth_config_version=12.0.119
+mod_menu_version=8.0.0
 server_translation_api_version=2.1.0+1.20.2-rc2
