feat: Update to Minecraft 1.21-1.21.1

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,6 @@
 //file:noinspection GroovyAccessibility
 //file:noinspection GroovyAssignabilityCheck
+//file:noinspection DependencyNotationArgument
 
 def archivesNameCommon = "${rootProject.mod_id}-common"
 
@@ -19,9 +20,6 @@ dependencies {
     // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-
-    // Mixin Extras
-    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${rootProject.mixin_extras_version}"))
 
     // Architectury API
     modApi("dev.architectury:architectury:${rootProject.architectury_api_version}") {
