--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,5 +1,7 @@
 //file:noinspection GroovyAccessibility
 //file:noinspection GroovyAssignabilityCheck
+//file:noinspection DependencyNotationArgument
+//file:noinspection DependencyNotationArgument
 
 plugins {
     id "com.github.johnrengelman.shadow" version "${shadow_plugin_version}"
@@ -30,9 +32,6 @@ configurations {
 
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-
-    // Mixin Extras
-    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${rootProject.mixin_extras_version}")))
 
     // Architectury API
     modRuntimeOnly("dev.architectury:architectury-fabric:${rootProject.architectury_api_version}")
