--- a/gradle.properties
+++ b/gradle.properties
@@ -13,15 +13,15 @@ mod_name=Steve's Realistic Sleep
 mod_description=Makes sleeping speed up time instead of skipping to day.
 mod_license=LGPL-3.0
 mod_version=1.10.2
-supported_minecraft_version=1.20.4
-supported_minecraft_version_name=1.20.4
+supported_minecraft_version=>=1.21 <=1.21.1
+supported_minecraft_version_name=1.21-1.21.1
 
 # Multiloader properties
 architectury_plugin_version=3.4-SNAPSHOT
-architectury_loom_version=1.6-SNAPSHOT
+architectury_loom_version=1.7-SNAPSHOT
 shadow_plugin_version=7.1.2
-minecraft_version=1.20.4
-java_version=17
+minecraft_version=1.21
+java_version=21
 enabled_platforms=fabric,neoforge
 
 # mc-publish properties
@@ -30,16 +30,15 @@ modrinth_project_id=KuNKN7d2
 
 # Fabric properties
 # Check these on https://modmuss50.me/fabric.html
-yarn_mappings=1.20.4+build.3
-fabric_loader_version=0.14.25
+yarn_mappings=1.21+build.9
+fabric_loader_version=0.15.11
 
 # NeoForge properties
-neoforge_version=20.4.237
+neoforge_version=21.0.167
 
 # Dependencies
-mixin_extras_version=0.3.5
-architectury_api_version=11.1.17
-fabric_api_version=0.97.1+1.20.4
-cloth_config_version=13.0.121
-mod_menu_version=9.0.0
-server_translation_api_version=2.2.0+1.20.3-rc1
+architectury_api_version=13.0.6
+fabric_api_version=0.100.3+1.21
+cloth_config_version=15.0.127
+mod_menu_version=11.0.0-beta.2
+server_translation_api_version=2.3.1+1.21-pre2
