--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -1,5 +1,6 @@
 //file:noinspection GroovyAccessibility
 //file:noinspection GroovyAssignabilityCheck
+//file:noinspection DependencyNotationArgument
 
 plugins {
     id "com.github.johnrengelman.shadow" version "${shadow_plugin_version}"
@@ -31,9 +32,6 @@ configurations {
 dependencies {
     neoForge "net.neoforged:neoforge:${rootProject.neoforge_version}"
 
-    // Mixin Extras
-    implementation(annotationProcessor("io.github.llamalad7:mixinextras-neoforge:${rootProject.mixin_extras_version}"))
-
     // Architectury API
     modRuntimeOnly("dev.architectury:architectury-neoforge:${rootProject.architectury_api_version}")
 
@@ -47,7 +45,7 @@ dependencies {
 processResources {
     inputs.property "version", "${project.version}-neoforge"
 
-    filesMatching("META-INF/mods.toml") {
+    filesMatching("META-INF/neoforge.mods.toml") {
         expand "version": project.version,
                 "mod_id": rootProject.mod_id,
                 "mod_namespace": rootProject.mod_namespace,
