fix: Declare mixins in `neoforge.mods.toml`

--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -14,6 +14,9 @@ ${mod_description}
 logoFile = "assets/${mod_namespace}/icon.png"
 displayURL = "https://github.com/Steveplays28/${mod_id}"
 
+[[mixins]]
+config="${mod_namespace}-common.mixins.json"
+
 [mc-publish]
 curseforge = "${curseforge_project_id}"
 modrinth = "${modrinth_project_id}"
