fix: Mark Architectury API as a required dependency

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -67,6 +67,7 @@ processResources {
                 "fabric_loader_version": rootProject.fabric_loader_version,
                 "supported_minecraft_version": rootProject.supported_minecraft_version,
                 "fabric_api_version": rootProject.fabric_api_version,
+                "architectury_api_version": rootProject.architectury_api_version,
                 "cloth_config_version": rootProject.cloth_config_version,
                 "mod_menu_version": rootProject.mod_menu_version
     }
